<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash_screen"
    android:gravity="center"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background"
        android:contentDescription="@string/bgImage"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="192dp"
        android:src="@drawable/wellcomdiv"
        android:contentDescription="@string/wellcomeimage"/>

    <ImageView
        android:layout_width="319dp"
        android:layout_height="274dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="298dp"
        android:scaleType="fitXY"
        android:src="@drawable/watch"
        android:contentDescription="@string/watch"/>

    <Button
        android:id="@+id/btnGoSetting"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="611dp"
        android:background="@drawable/btn_style"
        android:text="@string/SetupTheKeyboard"
        android:stateListAnimator="@null"


        />


</RelativeLayout>